--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -75,7 +75,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Học Tập</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="@Url.Action("LichHoc", "QuanLyHocTap")" class="dropdown-item">Lịch Học</a>
-                        <a href="@Url.Action("LopHocDaDangKy", "QuanLyHocTap")" class="dropdown-item">Danh Sách Lớp Đăng Ký</a>
+                        <a href="@Url.Action("Index", "TraCuu")" class="dropdown-item">Xem Lớp học đang chiêu sinh</a>
                     </div>
                 </div>
             </div>
