--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Edit.cshtml
@@ -22,13 +22,23 @@
                         <option value="">-- Chọn Lớp Học --</option>
                         @foreach (var lopHoc in ViewBag.LopHocList)
                         {
-                            var selected = Model.LopHoc != null && (Guid)lopHoc.LopHocId == Model.LopHoc.LopHocId ? "selected" : "";
-                            <option value="@lopHoc.LopHocId" @selected>@lopHoc.TenLopHoc</option>
+                            var ngayBatDau = lopHoc.NgayBatDau != null ? ((DateTime)lopHoc.NgayBatDau).ToString("dd/MM/yyyy") : "??";
+                            var ngayKetThuc = lopHoc.NgayKetThuc != null ? ((DateTime)lopHoc.NgayKetThuc).ToString("dd/MM/yyyy") : "??";
+
+                            <option value="@lopHoc.LopHocId" @(lopHoc.LopHocId == Model.LopHocId ? "selected" : "")>
+                                @lopHoc.TenLopHoc - (@ngayBatDau - @ngayKetThuc)
+                            </option>
+
+
+
                         }
+
                     </select>
                 </div>
 
                 <div class="mb-3">
+                    @Html.LabelFor(model => model.NgayHoc, "Ngày Học", new { @class = "form-label" })
+
                     @Html.TextBoxFor(model => model.NgayHoc, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
                     <small class="text-danger" id="NgayHocError"></small>
                     @Html.ValidationMessageFor(model => model.NgayHoc, "", new { @class = "text-danger" })
