--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
@@ -16,7 +16,7 @@
         </div>
 
         <div class="table-responsive">
-            <table class="table table-striped align-middle table-bordered">
+            <table class="table align-middle table-bordered">
                 <thead class="table-primary">
                     <tr class="text-center">
                         <th>STT</th>
