--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Index.cshtml
@@ -26,7 +26,7 @@
         </select>
 
         <div class="table-responsive">
-            <table class="table table-striped align-middle table-bordered">
+            <table class="table align-middle table-bordered">
                 <thead class="table-primary">
                     <tr class="text-center">
                         <th>STT</th>
